# Prog

./: .gitignore
td01/src/: td01_ex02.cpp  test.cpp
td02/src/: td02_exo1.cpp  td02_exo2.cpp  td02_exo3.cpp  td02_exo4.cpp  td02_exo5.cpp  td02_exo6.cpp  td02_exoBonus.cpp
td03/: CMakeLists.txt
td03/src/: td03_exo1.cpp  td03_exo2.cpp  td03_exo3.cpp  td03_exo4.cpp  td03_exo5.cpp  td03_exo6.cpp  td03_exo7.cpp  td03_exo8.cpp  td03_exoBonus.cpp
td04/: CMakeLists.txt
td04/src/: td04_exo1.cpp  td04_exo2.cpp  td04_exo3.cpp  td04_exo4.cpp  td04_exo5.cpp
td05/: CMakeLists.txt
td05/src/: td05_exo1.cpp  td05_exo2.cpp  td05_exo3.cpp  td05_exo4.cpp  td05_exo5.cpp  td05_exo6.cpp
